# SimpleCRF

./: README.md  setup.py
.github/workflows/: CI-build-abi3.yaml  CI-build.yaml  test-wheel-abi3.yaml
dependency/densecrf/: CMakeLists.txt
dependency/densecrf3d/: CMakeLists.txt
dependency/maxflow-v3.0/: CMakeLists.txt
